# ccplayground

./: README.md
t1/: CMakeLists.txt
t1/include/: array_2d.hpp  dijkstra.hpp  graph.hpp  image_viewer.hpp  maze.hpp  multi_path_builder.hpp  reccursive_builder.hpp  stack_builder.hpp  utils.hpp
t1/src/: image_viewer.cpp  test.cpp
t2/: CMakeLists.txt  dice.mtl  dice2.mtl  opengl_hello.cpp  torus.mtl  vboindexer.cpp
t2/duck/: duck.mtl
t2/floor/: floor.mtl
t2/include/: compile_shaders.hpp  data.hpp  object_loader.hpp  vboindexer.hpp
t2/shaders/: fragment  fragment_uv  vertex  vertex_uv
